Added content to homepage. Other tweaks to formatting, overriding base files of the theme

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: djamesscott90@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://darrenjamesscott.com" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  darrenjscott
 
@@ -63,3 +63,24 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+
+theme_color: coolblack
+night_mode: "on"
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+header_pages:
+  - index.md
+  - research.md
+#   - archives.html
+#   - categories.html
+#   - tags.html
+
+
+# Page default value
+# defaults:
+#   home:
+#     heading: "Your awesome heading"
+#     subheading: "Your awesome subheading"
+#     banner: "Your image url"
