Added some pics. Tweaking to theme.

--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "Darren J. Scott"
   subheading: "Physicist (particle theory)"
-  banner: "Your image url"
+  #banner: "Your image url"
